--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="See your income across time"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/Screenshot_1.png">
 
     <meta
       name="description"
