--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="See your income across time"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta property='og:image' content='%PUBLIC_URL%/favicon.ico'/>
+    <meta property='og:image' content='https://salaryhistoryvizualizer.vercel.app/Screenshot_1.png'/>
 
     <meta
       name="description"
